# msc

./: Cargo.toml  README.md  api.sh  notes.txt
src/: cli.rs  main.rs  obs_checkout.rs  obs_connect.rs  obs_getbinaries.rs  obs_net.rs
